# rusty-placement

./: pyproject.toml  tox.ini
rust/: Cargo.toml
rust/src/: lib.rs
src/rusty_placement/: __init__.py  main.py
src/rusty_placement/algorithms/: uniform.py
tests/: run.py  test_foo.py
