[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "rusty-placement"
requires-python = ">=3.8"
dependencies = ["numpy"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]


[tool.maturin]

python-source = "src"

# Build artifacts with the specified Cargo profile
profile = "release"

# Bindings type
bindings = "pyo3"

# Cargo manifest path
manifest-path = "rust/Cargo.toml"

features = ["pyo3/extension-module"]
module-name = "rusty_placement._algorithms_impl"
